--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,14 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+    - name: JMH Action
+      run: ./gradlew jmh
+    - name: JMH Benchmark Action
+      uses: kitlangton/jmh-benchmark-action@main
+      with:
+        jmh-output-path: benchmarks/output.json
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
