--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,11 +37,11 @@ jobs:
     - name: JMH Action
       run: ./gradlew jmh
 
-    - name: JMH Benchmark comparison
-      uses: kitlangton/jmh-benchmark-action@main
+    - name: JMH Benchmark upload
+      uses: actions/upload-artifact@v4
       with:
-        jmh-output-path: build/benchmarks/output.json
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        name: benchmark.json
+        path: build/benchmarks/output.json
 
   dependency-submission:
 
