--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,7 @@ jobs:
       run: ./gradlew build
 
     - name: Test results upload
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: reports
